2015-06-21  Uwe Tews

    * PHP7 raises E_DEPRECATED use __construct for compatibility 

2013-09-30

    * Fixed old vulnerability bug https://bugs.gentoo.org/show_bug.cgi?id=356615

2013-07-16  Uwe Tews

    * Fixed made Smarty_Compiler.class.php compatible with PHP 5.5


2012-09-24  Uwe Tews

    * Fixed  escape Smarty error messages to avoid possible script execution

    
2010-04-17  Uwe Tews

    * Fixed security hole in {math} plugin
    
2007-09-27  TAKAGI Masahiro  <matakagi@gmail.com>

    * docs/ja/designers/language-custom-functions/language-function-html-checkboxes.xml:
      sync with en.

2007-09-27  Monte Ohrt  <monte@ohrt.com>

    * docs/en/designers/language-custom-functions/language-function-html-checkboxes.xml:
      remove redundant attribute

2007-09-18  Messju Mohr  <messju@lammfellpuschen.de>

    * docs/id/programmers/plugins/plugins-functions.xml:
      removed errornous whitespace

2007-09-18  Zaenal Mutaqin  <zaenalm@gmail.com>

    * docs/id/designers/language-basic-syntax/language-escaping.xml
      docs/id/designers/language-basic-syntax/language-math.xml
      docs/id/designers/language-basic-syntax/language-syntax-attributes.xml
      docs/id/designers/language-basic-syntax/language-syntax-comments.xml
      docs/id/designers/language-basic-syntax/language-syntax-functions.xml
      docs/id/designers/language-basic-syntax/language-syntax-quotes.xml
      docs/id/designers/language-basic-syntax/language-syntax-variables.xml
      docs/id/designers/language-builtin-functions/language-function-capture.xml
      docs/id/designers/language-builtin-functions/language-function-config-load.xml
      docs/id/designers/language-builtin-functions/language-function-foreach.xml
      docs/id/designers/language-builtin-functions/language-function-if.xml
      docs/id/designers/language-builtin-functions/language-function-include-php.xml
      docs/id/designers/language-builtin-functions/language-function-include.xml