@@ -1,3 +1,9 @@
+2015-12-30  Uwe Tews
+
+    * fixed plugin filepath cache must not be static, because of possible problem
+      when using multiple Smarty instances with diffrent plugins_dir settings
+         https://github.com/smarty-php/smarty/issues/146 
+
 2015-06-21  Uwe Tews
 
     * PHP7 raises E_DEPRECATED use __construct for compatibility 
